# steam-review-analyzer

./: .checkpoint_2277560.txt  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ADVANCED_ANALYTICS.md  AGENTS.md  CHANGELOG.md  CODEBASE_ANALYSIS.md  DATABASE_AND_ARCHITECTURE.md  DOCKER.md  DOCUMENTATION_INDEX.md  Dockerfile  Fischer_s Fishing Journey_3363270_reviews.csv  GEMINI.md  LICENSE  NEXT_STEPS.md  PERFORMANCE_AND_UX_ENHANCEMENTS.md  QUICK_REFERENCE.md  QUICK_START_STARTUP_OPTIMIZATION.md  README.md  Romantic Escapades_2897760_dashboard.html  Romantic Escapades_2897760_reviews.csv  STARTUP_OPTIMIZATION.md  WUCHANG_ Fallen Feathers_2277560_reviews.csv  advanced_sentiment.py  analyze_reviews.py  api.py  config.py  correlation_analysis.py  dashboard.py  database.py  docker-compose.yml  export_cli.py  full_analysis.py  gui.py  gui_simple.py  keyword_analysis.py  main.py  pyproject.toml  (+11 more)
.gemini/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  tests.yml
data/: Fischer_s Fishing Journey_3363270_dashboard.html  README.md  Romantic Escapades_2897760_reviews.csv  chinese_stopwords.txt  reviews.db
docs/: 01-getting-started.md  02-user-guide.md  03-api-reference.md  04-dashboard-guide.md  07-performance.md  08-deployment.md  10-contributing.md  12-faq.md  README.md
plots/: README.md
scripts/: run_gui.sh
src/steam_review/: __init__.py  config.py  full_analysis.py  reviews.db
src/steam_review/analysis/: advanced_analyzer.py  analyze_reviews.py  correlation_analysis.py  game_benchmarking.py  keyword_analysis.py  keyword_extractor.py  recommendation_engine.py  sentiment_analysis.py  sentiment_analysis_enhanced.py  time_series_analysis.py  topic_modeling.py  version_trends.py
src/steam_review/api/: api.py
src/steam_review/cli/: cli.py
src/steam_review/dashboard/: advanced_analytics_page.py  cache_manager.py  dashboard.py  filters.py  generate_report.py  layout_manager.py  pdf_export.py  startup_optimizer.py
src/steam_review/dashboard/.cache/: analysis_metadata.json
src/steam_review/gui/: run_gui.py
src/steam_review/scraper/: steam_review_scraper.py
src/steam_review/storage/: async_database.py  auto_import.py  database.py  export_cli.py
src/steam_review/utils/: __init__.py  alerts.py  exceptions.py  scheduler.py  utils.py
src/tests/: test_analyze_reviews.py  test_cli.py  test_config.py  test_database.py  test_exceptions.py  test_scraper.py  test_steam_review_scraper.py
steam_review_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_analyze_reviews.py  test_steam_review_scraper.py
