[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steam-review-analyzer"
version = "1.0.0"
description = "A comprehensive tool for analyzing Steam game reviews using NLP and sentiment analysis"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Steam Review Analyzer Team"},
]

keywords = [
    "steam",
    "reviews",
    "analysis",
    "sentiment",
    "nlp",
    "data-visualization",
    "dashboard"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    "aiohttp==3.12.15",
    "click==8.2.1",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.59.0",
    "idna==3.10",
    "jieba==0.42.1",
    "joblib==1.5.1",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.5",
    "nltk==3.9.1",
    "numpy==2.3.2",
    "packaging>=20.0",
    "pandas==2.3.1",
    "pillow==11.3.0",
    "langdetect==1.0.9",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pydantic==2.10.6",
    "python-dotenv>=1.0.0",
    "pytz==2025.2",
    "regex==2025.7.34",
    "scipy==1.17.1",
    "seaborn==0.13.2",
    "six==1.17.0",
    "tqdm==4.67.1",
    "tzdata==2025.2",
    "wordcloud==1.9.4",
    "openpyxl==3.1.5",
    "fastapi==0.115.12",
    "uvicorn==0.34.0",
    "scikit-learn==1.6.1",
    "schedule==1.2.2",
    "streamlit==1.42.2",
    "plotly==6.0.0",
    "requests==2.32.3",
    "reportlab==4.2.5",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]
ml = [
    "torch>=2.0.0",
    "transformers>=4.48.0",
]
env = [
    "python-dotenv>=1.0.0",
]

[project.scripts]
steam-review = "src.steam_review.cli.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/steam-review-analyzer"
Documentation = "https://github.com/yourusername/steam-review-analyzer/wiki"
Repository = "https://github.com/yourusername/steam-review-analyzer.git"
Issues = "https://github.com/yourusername/steam-review-analyzer/issues"

[tool.setuptools]
packages = ["src", "src.steam_review"]

[tool.setuptools.package-data]
"src.steam_review" = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
explicit_package_bases = true
namespace_packages = true

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
